# KH-Lua-CPP-Hook

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  compile_mods.bat  copy_output_files.bat  remove_loaded_mods.bat
include/cpp/: cpp_handler.h
include/cpp/api/: kh_characters.h  kh_gameobject.h  kh_mod.h  kh_scene.h
include/cpp/events/: event_hook.h  kh_events.h
include/discord/: DCInstance.h  discord_instance.h
include/extra/: wil_extra.h
include/hook/: MemoryLib.h  config.h  console_lib.h  game_info.h  header_text.h  input.h  memory_lib.h
include/lua/: LuaBackend.h  lua_backend.h  lua_exec.h
src/: CPPHandler.cpp  CPPHandler.h  ConsoleLib.h  LuaBackend.cpp  config.h  header_text.cpp  lua_exec.cpp  main_dll.cpp
src/asm/: hook.asm
src/cpp/: CPPHandler.cpp  cpp_handler.cpp
src/cpp/api/: kh_characters.cpp  kh_gameobject.cpp  kh_scene.cpp
src/cpp/events/: event_hook.cpp  kh_event.cpp  kh_events.cpp
src/cpp/mods/: kh_mod_example.cpp  kh_mod_setup.cpp
src/discord/: DCInstance.cpp  discord_instance.cpp
src/hook/: ConsoleLib.cpp  config.cpp  console_lib.cpp  header_text.cpp  input.cpp  main_dll.cpp
src/lua/: lua_backend.cpp  lua_exec.cpp
